--- a/bisnes/pubspec.yaml
+++ b/bisnes/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   assets:
     - assets/icon/
     - assets/fotos/
+    - data/
     # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
