--- a/bisnes/pubspec.yaml
+++ b/bisnes/pubspec.yaml
@@ -59,8 +59,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icon/
-    - assets/fotos/
+    - assets/Icons/
+    - assets/Images/
     - data/
     # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -76,10 +76,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: CustomIcons
+      fonts:
+        - asset: assets/Icons/notification.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
