--- a/bisnes/pubspec.yaml
+++ b/bisnes/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_swiper_null_safety: ^1.0.2
   flutter_side_menu: ^0.4.0
   flutter_svg: ^2.0.9
+  shared_preferences: ^2.2.2
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
