--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^2.0.9
   shared_preferences: ^2.2.2
   path_provider: ^2.1.1
+  get:
 
 dev_dependencies:
   flutter_test:
