--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/Icons/
+    - assets/Fonts/
     - assets/Images/
     - data/
     # - images/a_dot_burr.jpeg
@@ -82,16 +83,16 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/Fonts/Poppins-Black.ttf
+        - asset: assets/Fonts/Poppins-Bold.ttf
+        - asset: assets/Fonts/Poppins-Thin.ttf
     - family: CustomIcons
       fonts:
         - asset: assets/Icons/CustomIcons.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
