--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,10 @@ dependencies:
   path_provider: ^2.1.1
   url_launcher: ^6.0.12
   flutter_swiper_view: ^1.1.8
+  flutter_link_previewer: ^3.2.2
+  google_maps_flutter: ^2.5.3
   get:
+  graphql_flutter: ^5.2.0-beta.6
 
 dev_dependencies:
   flutter_test:
