--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   flutter_link_previewer: ^3.2.2
   google_maps_flutter: ^2.5.3
   get:
-  graphql_flutter: ^5.2.0-beta.6
+#  graphql_flutter: ^5.2.0-beta.6
 
 dev_dependencies:
   flutter_test:
@@ -94,6 +94,7 @@ flutter:
     - family: Neusa
       fonts:
         - asset: assets/Fonts/NeusaNextStdTrial-Medium.otf
+        - asset: assets/Fonts/NeusaNextStdTrial-Light.otf
 
 
     - family: Poppins
