--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Chose Photo from Gallery</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>User to Capture Audio from the Microphone for Image Pickers</string>
 </dict>
 </plist>
