--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_swiper_null_safety: ^1.0.2
   flutter_side_menu: ^0.4.0
   flutter_svg: ^2.0.9
+  image_picker: ^1.0.7
   shared_preferences: ^2.2.2
   path_provider: ^2.1.1
   url_launcher: ^6.0.12
