--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_swiper_view: ^1.1.8
   flutter_link_previewer: ^3.2.2
   google_maps_flutter: ^2.5.3
+  reactive_forms: ^16.1.1
   get:
 #  graphql_flutter: ^5.2.0-beta.6
 
