--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   flutter_link_previewer: ^3.2.2
   flutter_swiper_view: ^1.1.8
   get: ^4.6.6
-  #  graphql_flutter: ^5.0.0
+  graphql_flutter: ^5.0.0
   image_picker: ^1.0.7
   path_provider: ^2.1.1
   reactive_forms: ^16.1.1
